Fix responsiveness on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ h2 {
     display: flex;
     align-content: center;
     justify-content: space-evenly;
-    width:100%;
+    width: 100%;
 }
 
 .btn {
@@ -264,6 +264,7 @@ li {
 
 /* for medium-small screen size 650px and down */
 @media screen and (max-width: 650px) {
+
     /* start page */
     #startup-img {
         background: url(../images/walt-disney-studios.webp) no-repeat center center;
@@ -280,5 +281,46 @@ li {
         margin: 10px 10px;
         padding: 5px;
         height: 70px;
+    }
+}
+
+/* for small screen sizes 320px and down */
+@media screen and (max-width: 320px) {
+    .answer-btn {
+        width: 80%;
+        font-size: 18px;
+        margin: 10px 10px;
+        padding: 5px;
+        height: auto;
+    }
+
+    #answers {
+        display: flex;
+        align-content: center;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        margin-top: 20px;
+        margin-bottom: 0;
+        height: auto;
+    }
+
+    .quiz-question {
+        height: 200px;
+    }
+
+    #quiz-container {
+        background-color: rgba(112, 151, 181, 0.9);
+        border-radius: 20px;
+        width: 80%;
+        margin-top: auto;
+        height: inherit;
+    }
+
+    #progress {
+        margin-bottom: 20px;
+    }
+
+    #next-container {
+        margin: 10px auto;
     }
 }
